--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
+    "start": "react-dotenv && react-scripts --openssl-legacy-provider start",
     "build": "react-dotenv && react-scripts build",
     "test": "react-dotenv && react-scripts test",
     "eject": "react-scripts eject",
